Opened 12 years ago

Closed 12 years ago

#9726 closed bug (fixed)

Beezer no longer works on latest nightlies

Reported by: Giova84 Owned by: jscipione
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/Development
Keywords: BWindow CenterOnScreen CenterIn Cc:
Blocked By: Blocking:
Platform: x86

Description

As the subject say, Beezer ( https://bitbucket.org/cpr/beezer ) no longer works on the latest nightlies. It just crash when i attempt to run it. I have also tried to compile it again from sources but the result is the same. Maybe is related to DEP? Crash report and syslog attached. hrev45586

Attachments (2)

Beezer-3249-debug-30-04-2013-14-13-39.report (9.1 KB ) - added by Giova84 12 years ago.
syslog.txt (2.6 KB ) - added by Giova84 12 years ago.

Download all attachments as: .zip

Change History (33)

by Giova84, 12 years ago

Attachment: syslog.txt added

comment:1 by umccullough, 12 years ago

Doesn't look DEP related, crash seems to indicate the problem occurred in BWindow itself?

Does it work on hrev45516 or earlier? It might be ASLR related I guess.

comment:3 by phoudoin, 12 years ago

Owner: changed from nobody to jscipione
Status: newassigned

comment:4 by axeld, 12 years ago

Unlikely; this called UpdateSizeLimits() before, and still does so.

comment:5 by umccullough, 12 years ago

I guess it would be interesting to also know if it worked in hrev45581 (or earlier) anyhow.

in reply to:  5 comment:6 by Giova84, 12 years ago

Replying to umccullough:

I guess it would be interesting to also know if it worked in hrev45581 (or earlier) anyhow.

Beezer works fine on hrev45574.

comment:7 by jscipione, 12 years ago

I changed the return value of CenterIn() and CenterOnScreen() from void to BPoint which means that Beezer needs to be recompiled since the API has changed. I could change the methods back to return void again since I'm not really using the return value anyway.

comment:8 by Giova84, 12 years ago

Hi John, I've recompiled Beezer on hrev45586, from the last availabe source, but the result is the same: crash as before.

Last edited 12 years ago by Giova84 (previous) (diff)

comment:9 by augiedoggie, 12 years ago

Seems like API breakage, the precompiled version for download at bitbucket crashes but a newly built version works fine for me.

comment:10 by umccullough, 12 years ago

I vote for reverting the return type change at this point (perhaps mark it as R2 item?) - it's relatively trivial to get the window position, and there's not a huge use for it after centering anyway.

Last edited 12 years ago by umccullough (previous) (diff)

in reply to:  9 ; comment:11 by Giova84, 12 years ago

Replying to augiedoggie:

Seems like API breakage, the precompiled version for download at bitbucket crashes but a newly built version works fine for me.

I really don't understand why.. I have downloaded the source code from here: https://bitbucket.org/cpr/beezer/get/c8ce6f66abf3.zip (the last available in the main page) and i've built it as usual. But when i launch the executable, crash immediately. Can you try to send me the binary which you've built? :-)

in reply to:  11 comment:12 by anevilyak, 12 years ago

Replying to Giova84:

I really don't understand why.. I have downloaded the source code from here: https://bitbucket.org/cpr/beezer/get/c8ce6f66abf3.zip (the last available in the main page) and i've built it as usual. But when i launch the executable, crash immediately.

Are you actually double clicking the newly built executable directly, or are you trying to load it by e.g. clicking a zip file? If the latter, bear in mind the app will be found by signature, ergo if there's any other copy of Beezer laying around on your drives somewhere, it's pretty much a gambling game as to which one will in fact be found/used.

comment:13 by Giova84, 12 years ago

I just double clicked in the newly built executable. I have also tried to delete the config folder of Beezer and the signature file, but the result is always the same, and i have also tried to built Beezer using gcc2 and gcc4, but always crash.

comment:15 by umccullough, 12 years ago

Component: ApplicationsKits/Interface Kit
Keywords: BWindow CenterOnScreen CenterIn added; no longer works on latest nightlies removed

in reply to:  13 ; comment:16 by umccullough, 12 years ago

Replying to Giova84:

I just double clicked in the newly built executable. I have also tried to delete the config folder of Beezer and the signature file, but the result is always the same, and i have also tried to built Beezer using gcc2 and gcc4, but always crash.

How are you updating your Haiku installs? Is it possible you have mismatched headers?

comment:17 by Giova84, 12 years ago

Component: Kits/Interface KitApplications
Keywords: no longer works on latest nightlies added; BWindow CenterOnScreen CenterIn removed

Hi Augiedoggie. Thank you. Your binary works ok for me! This is very odd, because before on my system i've only had the newly rebuilt version of Beezer which crashed (with the same size in MB). You binary, instead, works fine!

I have built Beezer using cmake . and make in the source folder. I miss something else?

comment:18 by umccullough, 12 years ago

Component: ApplicationsKits/Interface Kit
Keywords: BWindow CenterOnScreen CenterIn added; Beezer no longer works on latest nightlies removed

in reply to:  16 ; comment:19 by Giova84, 12 years ago

Component: Kits/Interface KitApplications
Keywords: Beezer no longer works on latest nightlies added; BWindow CenterOnScreen CenterIn removed

Replying to umccullough:

Replying to Giova84:

I just double clicked in the newly built executable. I have also tried to delete the config folder of Beezer and the signature file, but the result is always the same, and i have also tried to built Beezer using gcc2 and gcc4, but always crash.

How are you updating your Haiku installs? Is it possible you have mismatched headers?

The last time i have deleted system and common, and copy/move new system and common on my disk. Then i have replaced home with my personal settings and apps. headers folder in develop is the same! I will try to update this folder too :-)

comment:20 by Giova84, 12 years ago

I have noticed that after my reply, keywords was changed! Why? I have just reply to umccullough! :-)

in reply to:  20 comment:21 by umccullough, 12 years ago

Component: ApplicationsKits/Interface Kit
Keywords: BWindow CenterOnScreen CenterIn added; Beezer no longer works on latest nightlies removed

Replying to Giova84:

I have noticed that after my reply, keywords was changed! Why? I have just reply to umccullough! :-)

Because you keep ignoring that there are changes to the ticket when you're replying... Trac warns you - at which point you have to refresh the page and then reply

comment:22 by Giova84, 12 years ago

Sorry! I was typing and i have totally ignored/missed these warnings!

in reply to:  19 comment:23 by anevilyak, 12 years ago

Replying to Giova84:

The last time i have deleted system and common, and copy/move new system and common on my disk. Then i have replaced home with my personal settings and apps. headers folder in develop is the same! I will try to update this folder too :-)

This is *not* a safe way to update Haiku, particularly if you plan on compiling things. There are other things besides headers that are part of the development kit that may change between revisions. It's generally recommended to keep all your data and such on a separate partition so you can do a full update of the boot partition to ensure everything is up-to-date OS-wise.

comment:24 by Giova84, 12 years ago

In fact, for my "developer installation" i do exactly what you describe :-) Instead, for "every days" Haiku, i look what is up-to-date (system and common without exception) and for the rest i merge the home folder (especially when there are changes with new nightlies) to keep the most of my personal settings and the common/lib and common/bin with thirdy party binaries and libraries.

comment:25 by phoudoin, 12 years ago

Regarding API breakage, I don't recall when CenterOnScreen() and CenterIn() method were introduced but even if these are Haiku-specific, maybe we should refrain to change public API as easy as we were used to be able since long now that there is more Haiku apps around.

Anyway, this ticket can be closed as there is nothing wrong in Haiku itself, beside the needs to start prepare ourself to think about what going R1 will means in terms of public API long term support :)

comment:26 by jscipione, 12 years ago

Keep the ticket open, yes technically it isn't a Haiku bug because we never promised those methods wouldn't change, but, I don't need to change them, and since I've unwittingly broke 3rd party apps I think it's best to return these methods to their original void returning state, the I'll close this bug (as the problem will then be fixed). I'm working on the problem now, please be patient.

in reply to:  26 comment:27 by phoudoin, 12 years ago

Replying to jscipione:

I think it's best to return these methods to their original void returning state, the I'll close this bug (as the problem will then be fixed).

Agreed. After all, I handed this ticket to you ;-)

comment:28 by jscipione, 12 years ago

Should be fixed in hrev45590 as those methods return void once again, please update and verify when you get a chance.

comment:29 by Giova84, 12 years ago

Hi John, When hrev45590 will be available here http://www.haiku-files.org/haiku/development/ i will send you the feedback :-)

comment:30 by Giova84, 12 years ago

hrev45606 Previous revision of Bezeer works fine again.

comment:31 by anevilyak, 12 years ago

Resolution: fixed
Status: assignedclosed
Note: See TracTickets for help on using tickets.